@@ -24,6 +24,7 @@ For further information and questions please use the web site
 #include <dessert.h>
 #include <string.h>
 #include "../../config.h"
+#include "../../android.h"
 
 int olsr_db_lis_islocaliface(u_int8_t iface_addr[ETH_ALEN]) {
 	dessert_meshif_t* iface = dessert_meshiflist_get();
