@@ -23,7 +23,10 @@ For further information and questions please use the web site
 
 #include <dessert.h>
 #include <dessert-extra.h>
+
+#ifndef ANDROID
 #include <printf.h>
+#endif
 
 #include "config.h"
 #include "cli/olsr_cli.h"
@@ -44,6 +47,7 @@ char*   routing_log_file     = NULL;
 dessert_periodic_t* periodic_send_hello;
 dessert_periodic_t* periodic_send_tc;
 
+#ifndef ANDROID
 int print_macaddress_arginfo(const struct printf_info *info, size_t n, int *argtypes, int *size) {
     if (n > 0) argtypes[0] = PA_POINTER; // we always take exactly one argument (pointer to the structure)
     return 1;
@@ -57,9 +61,12 @@ int print_macaddress(FILE *stream, const struct printf_info *info, const void * 
     if (len == -1) return -1;
     return len;
 }
+#endif
 
 int main(int argc, char** argv) {
-	register_printf_specifier('M', print_macaddress, print_macaddress_arginfo);
+    #ifndef ANDROID
+    register_printf_specifier('M', print_macaddress, print_macaddress_arginfo);
+    #endif
 
     /* initialize daemon with correct parameters */
     FILE *cfg = NULL;
