@@ -38,3 +38,7 @@
          - adding CLI parameter to config file with comments
          - unifying routing tables to the streucture: destination | next hop | out iface addr | daemon specifc
          - changing "metric x" CLI parameter to "set metric x" and fixing crash bug
+
+20110323 - added android compatibility
+	 - added android make target
+	 - added "android.files" diretory
